# rustitude-core

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bacon.toml  build.rs  convert
.cargo/: config.toml
.github/workflows/: main.yml
benches/: kmatrix_benchmark.rs  simd_benchmark.rs
crates/rustitude/: CHANGELOG.md  Cargo.toml  convert
crates/rustitude-gluex/: Cargo.toml
crates/rustitude/.cargo/: config.toml
crates/rustitude/.github/workflows/: rust.yml
crates/rustitude/src/: amplitude.rs  dataset.rs  gluex.rs  lib.rs  main.rs
src/: amplitude.rs  dataset.rs  docs-header.html  four_momentum.rs  gluex.rs  lib.rs  likelihood.rs  main.rs  manager.rs  node.rs  parameter.rs  variable.rs
src/fit/: mod.rs
tests/: integration_test.rs
