[package]
name = "rustitude"
version = "0.1.1"
edition = "2021"
authors = ["Nathaniel Dene Hoffman <dene@cmu.edu>"]
description = "A library to create and operate models for particle physics amplitude analyses"
repository = "https://github.com/denehoffman/rustitude/"
homepage = "https://github.com/denehoffman/rustitude/"
license = "BSD-3-Clause"
readme = "README.md"
exclude = ["convert", "data.*", "src/main.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = { version = "0.5.1", features = ["num-complex"] }
argmin = "0.8.1"
argmin-math = "0.3.0"
nalgebra = "0.32.3"
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
num = "0.4.1"
num-complex = "0.4.4"
polars = { version = "0.35.4", features = ["parquet", "describe"] }
rayon = "1.8.0"
sphrs = "0.2.2"
thiserror = "1.0.51"
derive_more = { version = "0.99.17", default_features = false, features = [
  "is_variant",
  "unwrap",
  "display",
] }
derive-new = "0.6.0"
parking_lot = "0.12.1"
rustc-hash = "1.1.0"
accelerate-src = "0.3.2"

[features]
default = []
blas = ["ndarray/blas"]
openblas-static = ["blas", "ndarray-linalg/openblas-static"]
openblas-system = ["blas", "ndarray-linalg/openblas-system"]
netlib-static = ["blas", "ndarray-linalg/netlib-static"]
netlib-system = ["blas", "ndarray-linalg/netlib-system"]
intel-mkl-static = ["blas", "ndarray-linalg/intel-mkl-static"]
intel-mkl-system = ["blas", "ndarray-linalg/intel-mkl-system"]
