[package]
name = "rustitude"
version = "0.2.0-alpha"
edition = "2021"
authors = ["Nathaniel Dene Hoffman <dene@cmu.edu>"]
description = "A library to create and operate models for particle physics amplitude analyses"
repository = "https://github.com/denehoffman/rustitude/"
homepage = "https://github.com/denehoffman/rustitude/"
license = "BSD-3-Clause"
readme = "README.md"
exclude = ["convert", "data.*", "src/main.rs"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = { version = "1.8.0" }
approx = { version = "0.5.1", features = ["num-complex"] }
argmin = "0.9.0"
argmin-math = "0.3.0"
nalgebra = "0.32.3"
ndarray = { version = "0.15.6", features = ["approx-0_5"] }
ndarray-linalg = "0.16.0"
num = "0.4.1"
num-complex = "0.4.4"
num-traits = "0.2.17"
polars = { version = "0.37.0", features = ["parquet", "describe", "lazy"] }
sphrs = "0.2.2"
thiserror = "1.0.51"
derive_more = { version = "0.99.17", default-features = false, features = [
  "is_variant",
  "unwrap",
  "display",
] }
derive-new = "0.6.0"
parking_lot = "0.12.1"
rustc-hash = "1.1.0"
variantly = "0.4.0"
anyinput = "0.1.6"
dashmap = "5.5.3"
derive_builder = "0.13.0"
static_assertions = "1.1.0"
rand = "0.8.5"
[target.'cfg(target_os = "macos")'.dependencies]
accelerate-src = "0.3.2"

[features]
default = []
blas = ["ndarray/blas"]
openblas-static = ["blas", "ndarray-linalg/openblas-static"]
openblas-system = ["blas", "ndarray-linalg/openblas-system"]
netlib-static = ["blas", "ndarray-linalg/netlib-static"]
netlib-system = ["blas", "ndarray-linalg/netlib-system"]
intel-mkl-static = ["blas", "ndarray-linalg/intel-mkl-static"]
intel-mkl-system = ["blas", "ndarray-linalg/intel-mkl-system"]
# rayon = ["rayon_"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/docs-header.html"]
