[package]
name = "rustitude"
version = "0.2.0-alpha"
edition = "2021"
authors = ["Nathaniel Dene Hoffman <dene@cmu.edu>"]
description = "A library to create and operate models for particle physics amplitude analyses"
repository = "https://github.com/denehoffman/rustitude/"
homepage = "https://github.com/denehoffman/rustitude/"
license = "BSD-3-Clause"
readme = "README.md"
exclude = ["convert", "data.*", "src/main.rs"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = { version = "1.8.0" }
approx = { version = "0.5.1", features = ["num-complex"] }
argmin = "0.10.0"
argmin-math = "0.4.0"
nalgebra = "0.32.3"
num = "0.4.1"
num-complex = "0.4.4"
num-traits = "0.2.17"
sphrs = "0.2.2"
thiserror = "1.0.51"
derive_more = { version = "0.99.17", default-features = false, features = [
  "is_variant",
  "unwrap",
  "display",
] }
derive-new = "0.6.0"
parking_lot = "0.12.1"
rustc-hash = "1.1.0"
variantly = "0.4.0"
anyinput = "0.1.6"
uuid = { version = "1.7.0", features = ["v4"] }
parquet = "50.0.0"
rand = "0.8.5"

[features]
simd = []

[profile.release]
# lto = true
# codegen-units = 1
panic = "abort"
debug = true
# debug = false
# strip = true

[[bench]]
name = "simd_benchmark"
harness = false

[[bench]]
name = "kmatrix_benchmark"
harness = false


[dev-dependencies]
criterion = "0.5.1"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./src/docs-header.html"]
